--- a/app/templates/beverage/new.hbs
+++ b/app/templates/beverage/new.hbs
@@ -60,13 +60,13 @@
 	{{/each}}
 	<hr>
 	<h5>Steps <a class="btn-floating waves-effect waves-light green" {{action 'addStep'}}><i class="mdi-content-add"></i></a></h5>
-	{{#each steps as |step index|}}
+	{{#each stepsData as |step index|}}
 		<div class="row">
 			<div class="col s1 m1">
 				<h5>{{add-one index}}</h5>
 			</div>
 			<div class="col s10 m10">
-				{{md-input value=step}}
+				{{md-input value=step.step}}
 			</div>
 			<div class="col s1 m1">
 				<a class="btn-floating waves-effect waves-light green" {{action "removeStep" index}}>
@@ -83,11 +83,11 @@
 	</div>
 	{{/if}}
 	<div class="col s12 right-align">
-		<a class="waves-effect waves-light red darken-2 btn" {{action 'cancel'}}>
+		<a class="waves-effect waves-light red darken-2 btn" {{action 'cancelBeverage'}}>
 			<i class="mdi-navigation-cancel left"></i>
 			<span class="hide-on-small-only">Cancel</span>
 		</a>
-		<a class="waves-effect waves-light green darken-2 btn" {{action 'saveIngredient'}}>
+		<a class="waves-effect waves-light green darken-2 btn" {{action 'saveBeverage'}}>
 			<i class="mdi-content-save left"></i>
 			<span class="hide-on-small-only">Save Ingredient</span>
 		</a>
